# InSitu

./: README.md
DummySPH/: AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.h  Driver.cxx  HowToCompile.txt  HowToRun.txt  VTKmAdaptor.h  ascent_actions.json  catalyst_state.py  cuda_helpers.cpp  insitu_viz.h  rendering_point_velocity_component.yaml  solvers.cxx  solvers.h  timer.hpp
DummySPH/ParaView_scripts/: pvLoadVTK-mStrided.py  pvReadBlueprintRootFile.py
DummySPH/ascent_yaml/: tipsy_box.yaml
Jacobi/Classic/: CMakeLists.txt  FEAdaptor.cxx  FEAdaptor.h  PJacobi_InSitu.c  PJacobi_InSitu.h  coprocessor.py  pjacobi.c  plotting.py  solvers.c  solvers.h
Jacobi/MeshBuilder/: pvImageData.py  pvMultiBlock0.py  pvRectilinearGrid.py  pvUnstructuredGrid.py  vtkImageData0.py  vtkImageData1.py  vtkImageData2.py  vtkImageData3.py  vtkMultiBlock0.py  vtkRectilinearGrid0.py  vtkRectilinearGrid1.py  vtkUntructuredGrid0.py  vtkUntructuredGrid1.py
Jacobi/Sensei/C/: Bridge.cxx  Bridge.h  CMakeLists.txt  JacobiDataAdaptor.cxx  JacobiDataAdaptor.h  README.txt  adios_config.xml  jacobi.xml  jacobi_catalyst.pvsm  jacobi_catalyst_sensei_1.py  jacobi_catalyst_sensei_2.py  jacobi_sensei_1.xml  jacobi_sensei_2.xml  pjacobi.c  solvers.c  solvers.h
Jacobi/Sensei/C/exercise/: JacobiDataAdaptor.cxx  JacobiDataAdaptor.h
Jacobi/Sensei/C/solution/: JacobiDataAdaptor.cxx  JacobiDataAdaptor.h
Jacobi/VTKZeroCopy/: CMakeLists.txt  README.md  zero_copy.cpp
LULESH/: CMakeLists.txt  HowtoRun.txt  HowtoRun_WithAscent.txt  lulesh-ascent.h  lulesh-catalyst.cc  lulesh-catalyst.h  lulesh-init.cc  lulesh.cc  lulesh.h  run_lulesh.sh  script.py
